# pet_projects

./: .gitignore  README.md
asio_web_server/: CMakeLists.txt
asio_web_server/include/: base_client.hpp  base_server.hpp  client_connection.hpp  common.hpp  connection.hpp  message.hpp  server_connection.hpp  thread_safe_queue.hpp
asio_web_server/src/: base_client.cpp  base_server.cpp  connection.cpp  main.cpp
asio_web_service/client/: CMakeLists.txt
asio_web_service/client/include/: base_client.hpp  my_client.hpp
asio_web_service/client/src/: base_client.cpp  main.cpp  my_client.cpp
asio_web_service/server/: CMakeLists.txt
asio_web_service/utils/: common.hpp  message.hpp
blockchain/: CMakeLists.txt
blockchain/include/: block.hpp  transaction.hpp
blockchain/net/include/: connection.hpp  listener.hpp  net_utils.hpp  p2p_message.hpp  peer.hpp
blockchain/net/src/: net_utils.cpp
blockchain/src/: Transaction.cpp  block.cpp  utils.cpp
blockchain/utils/: core_utils.hpp  thread_safe_queue.hpp
blockchain/utils/include/: core_utils.hpp  thread_safe_queue.hpp
blockchain/utils/src/: core_utils.cpp
image_processor/: CMakeLists.txt
image_processor/include/: basic_filter.h  blur_filter.h  bmp_utils.h  command_line_parser.h  crop_filter.h  crosspolynomial_filter.h  edge_filter.h  filter_consts.h  filter_factory.h  filters.h  grayscale_filter.h  image.h  negative_filter.h  pipeline.h  rgb_pixel.h  (+1 more)
memory_allocator/: CMakeLists.txt  heap_allocator.cpp  heap_allocator.h  test.cpp
serialization/: CMakeLists.txt
simple_web_server/: CMakeLists.txt
(+40 files in other folders)
